# keh-tech-audit-tool

./: .design-system-version  .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierrc.yml  @  Dockerfile  Makefile  README.md  Technical_help.md  application.py  compose.yaml  package-lock.json  package.json  pyproject.toml  review.json  script.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml
concourse/: ci.yml  ci_dev.yml  ci_prod.yml
concourse/scripts/: assume_role.bash  assume_role.sh  build_image.bash  build_image.sh  read_tag.bash  redeploy_api.sh  secrets_handler.py  set_pipeline.bash  set_pipeline.sh  terraform_infra.bash  terraform_infra.sh  test_script.bash
documentation/: mkdocs.yml
documentation/docs/: Technical_help.md  index.md
server/: data.json  main.py  test.py
static/: formScripts.js  scripts.js  utilityFunctions.js  utils.js  validateDetails.js
static/js/: developed.js  project_dependencies.js  submission.js  summary.js  view_project.js
templates/: architecture-pre-survey.html  architecture.html  core.html  dashboard.html  database.html  developed.html  frameworks.html  index.html  infrastructure.html  integration.html  integrations.html  languages.html  pre-survey.html  project.html  source_control.html  survey.html  tech-pre-survey.html  utils.html  validate_details.html  view_project.html  you.html
templates/chapter_summaries/: architecture_summary.html  project_summary.html  supporting_tools_summary.html  (+1 more)
tests/: README.md  test.py  test_login.py  test_navigation.py  test_project_creation.py  test_utils.py
(+55 files in other folders)
