[tool.poetry]
name = "Tech Audit Tool UI"
version = "0.1.0"
description = "This Python Flask application is used for data collection."
authors = ["ONSDigital"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
python-frontmatter = "^1.1.0"
pre-commit = "^3.7.1"
boto3 = "^1.35.33"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
mkdocs = "^1.6.1"
selenium = "^4.27.1"
pytest = "^8.4.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.4.2"
isort = "^5.13.2"
selenium = "^4.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
